typescript/checker/tests/conformance/es6/Symbols/symbolProperty48.ts.stderr
error: NonSymbolTypedFieldFromSymbol {
    span: Span {
        lo: BytePos(
            66,
        ),
        hi: BytePos(
            81,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty48.ts:6:10
  |
6 |         [Symbol.iterator]() { }
  |          ^^^^^^^^^^^^^^^

